Fix: CSS vendor prefix ve line-clamp uyarıları düzeltildi

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,9 +16,11 @@ html {
   overflow-x: hidden;
   /* High-DPI text rendering */
   -webkit-font-smoothing: antialiased;
-  font-smooth: always;
+  -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   /* Prevent text size adjustment on mobile */
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
   text-size-adjust: 100%;
 }
 
@@ -251,7 +253,6 @@ select {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
-  line-clamp: 1;
 }
 
 .line-clamp-2 {
@@ -259,7 +260,6 @@ select {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
-  line-clamp: 2;
 }
 
 .line-clamp-3 {
@@ -267,7 +267,6 @@ select {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
-  line-clamp: 3;
 }
 
 /* GLASS MORPHISM EFFECT */
